--- a/frontend/src/components/NotificationButton/style.css
+++ b/frontend/src/components/NotificationButton/style.css
@@ -7,7 +7,7 @@
     border-radius: 10px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: Center;
     cursor: pointer;
 }
 
