--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,3 +14,15 @@ a, a:hover, a:visited {
     color: unset;
     text-decoration: none;
 }
+
+
+.dsmeta-container {
+    width: 100%;
+    max-width: 900px;
+    margin: 0 auto;
+}
+
+#sales{
+    padding: 40px 10px;
+
+}
